
SVN
-------------------------------

All:   Resolved issue CASTOR-1619 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: Exceptions do not support claus.
       Details: http://jira.codehaus.org/browse/CASTOR-1619
       (Ralf - 20061012)

XML:   Resolved issue CASTOR-1618 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: JAXP usage at Unmarshaller.
       Details: http://jira.codehaus.org/browse/CASTOR-1618
       (Ralf - 20061012)

All:   Resolved issue CASTOR-1620 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: unknown methods.
       Details: http://jira.codehaus.org/browse/CASTOR-1620
       (Ralf - 20061012)

XML:   Resolved issue CASTOR-587 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with default values for date/time types in code generation
       Details: http://jira.codehaus.org/browse/CASTOR-587
       (Edward - 20061011)

XML:   Resolved issue CASTOR-1597 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Introduce proper exception handling to source generator
       Details: http://jira.codehaus.org/browse/CASTOR-1597
       (Edward - 20061010)

XML:   Resolved issue CASTOR-1117 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with setting type of untyped attribute through binding file.
       Details: http://jira.codehaus.org/browse/CASTOR-1117
       (Werner - 20061009)

XML:   Resolved issue CASTOR-1137 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with special characters in enumerations.
       Details: http://jira.codehaus.org/browse/CASTOR-1137
       (Werner - 20061009)

XML:   Resolved issue CASTOR-1087 using contribution from Werner Guttmann [werner.guttmann@gmx.net]